<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xml_back_app"
    android:orientation="vertical"
    tools:context=".CalendarActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/row_pass0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_pass_spacing"
            android:gravity="center_vertical"
            android:padding="@dimen/s_pass_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/s_pass_spacing"
                android:text="@string/password0"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pass0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:padding="@dimen/s_pass_spacing"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/row_pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_pass_spacing"
            android:gravity="center_vertical"
            android:padding="@dimen/s_pass_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/s_pass_spacing"
                android:text="@string/password1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pass1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:padding="@dimen/s_pass_spacing"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/row_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_pass_spacing"
            android:gravity="center_vertical"
            android:padding="@dimen/s_pass_spacing" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/s_pass_spacing"
                android:text="@string/password2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pass2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:padding="@dimen/s_pass_spacing"
                android:textColor="@color/black" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingRight="@dimen/s_pass_spacing"
        android:weightSum="4" >

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/s_pass_spacing"
            android:layout_weight="3"
            android:paddingTop="@dimen/s_pass_spacing" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/num7"
                    style="@style/PassButton"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/num8"
                    style="@style/PassButton"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/num9"
                    style="@style/PassButton"
                    android:text="@string/nine" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/s_pass_spacing" >

                <Button
                    android:id="@+id/num4"
                    style="@style/PassButton"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/num5"
                    style="@style/PassButton"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/num6"
                    style="@style/PassButton"
                    android:text="@string/six" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/s_pass_spacing" >

                <Button
                    android:id="@+id/num1"
                    style="@style/PassButton"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/num2"
                    style="@style/PassButton"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/num3"
                    style="@style/PassButton"
                    android:text="@string/three" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/s_pass_spacing" >

                <!-- View
                    style="@style/PassButton"
                    android:background="#A0000000" /-->
                    
                <Button
                    android:id="@+id/cancel"
                    style="@style/PassButton"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/num0"
                    style="@style/PassButton"
                    android:text="@string/zero" />

                <View
                    style="@style/PassButton" />
            </TableRow>
        </TableLayout>

        <!-- 83 = 320 - 237 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/s_pass_spacing"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/s_pass_spacing" >

            <ImageButton
                android:id="@+id/delete"
                style="@style/PassButton"
                android:layout_width="match_parent"
                android:contentDescription="@string/blank"
                android:src="@android:drawable/ic_input_delete" />

            <ImageButton
                android:id="@+id/reset"
                style="@style/PassButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/s_pass_spacing"
                android:contentDescription="@string/blank"
                android:src="@android:drawable/ic_menu_rotate" />

            <Button
                android:id="@+id/ok"
                style="@style/PassButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_pass_btn_double"
                android:layout_marginTop="@dimen/s_pass_spacing"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>